re fix mobile whitespace on right side

--- a/styles.css
+++ b/styles.css
@@ -155,11 +155,14 @@ input:focus {
 }
 
 @media only screen and (max-width: 1060px) {
+    body {
+        overflow-x: hidden;
+    }
+
     .container {
         flex-flow: column;
         height: auto;
         text-align: center;
-        overflow-x: hidden;
     }
     .hero-image {
         width: auto;
